--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "mongoose": "^8.2.2",
+    "nanoid": "^5.0.6",
     "next": "14.1.3",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "sass": "^1.72.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
