--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "mongoose": "^8.2.2",
     "nanoid": "^5.0.6",
     "next": "14.1.3",
@@ -17,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-share": "^5.1.0",
     "sass": "^1.72.0"
   },
   "devDependencies": {
