--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tsparticles/engine": "^3.3.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.3.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "mongoose": "^8.2.2",
@@ -21,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-share": "^5.1.0",
     "sass": "^1.72.0"
   },
